2004-04-11  Todd Berman  <tberman@sevenl.net>

	* Gui/Workbench/WorkbenchMemento.cs: fix potential nullrefs.

2004-04-11  Todd Berman  <tberman@sevenl.net>

	* Commands/AutostartCommands.cs: reorganize the SetMemento so it works
	better.
	* Gui/Workbench/WorkbenchMemento.cs: readd windowstate.
	* Gui/Workbench/DefaultWorkbench.cs: now we restore from maximized
	properly.

2004-04-10  Todd Berman  <tberman@sevenl.net>

	* Internal/Project/Project/AbstractProject.cs: fix potentiall nullref

2004-04-10  Todd Berman  <tberman@sevenl.net>

	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs:
	* Gui/Workbench/Layouts/SdiWorkspaceWindow.cs:
	* Gui/IWorkbenchLayout.cs:
	fix bug #56769.

2004-04-09  John Luke  <jluke@cfl.rr.com>

	* Commands/AutostartCommands: remove dead code
	* Gui/Pads/TerminalPad.cs: update and rename from 'Output' to 'Terminal'
	* Gui/HtmlControl/MozillaControl.cs: remove CWL

2004-04-09  Todd Berman  <tberman@sevenl.net>

	* Gui/Dialogs/SharpDevelopAboutPanels.cs: closing per bug #55955.

2004-04-09  Todd Berman  <tberman@sevenl.net>

	* Gui/Components/SdStatusBar.cs: Add pulsing.

2004-04-09  Pawel Rozanski  <tokugawa@afn.no-ip.org>

	* Services/Tasks/Task.cs: don't show "()" when error.ErrorNumber is 
	empty

2004-04-07  John Luke  <jluke@cfl.rr.com>

	* Gui/Dialogs/CommonAboutDialog.cs:
	* Gui/Dialogs/SharpDevelopAboutPanels.cs: rearrange the copyright, 
	license, sponsorship, and version information.  Add back info about    
	SharpDevelop and AlphaSierraPapa
	* Gui/Dialogs/TipOfTheDay.cs: remove IDisposable and call Hide and 
	Dispose instead of Destroy on the window, remove some unneccesary 
	public things
	* Commands/HelpCommand.cs: revert addition of using () {} to 
	tipoftheday
	* Gui/Workbench/DefaultWorkbench.cs: uncomment memento restoring code

2004-04-07  Todd Berman  <tberman@sevenl.net>

	* Commands/ProjectBrowserCommands/FolderNodeCommands: Incorporate bug
	fix for bug #56275 based on a patch from eddie tejeda